@@ -31,5 +31,6 @@ nn?.fs: 110988
 nc?.fs: 114260
 0.5.0:  132724
 arg.fs: 133524
+tis.fs: 134516
 
 fina: CompileSize=80186 CompileTime=10714 msec TestTime=24450 msec (without floats)
